--- a/scss/layout/_extend.scss
+++ b/scss/layout/_extend.scss
@@ -1,6 +1,24 @@
 /* Placeholders */
 
 %center {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+%btn {
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin-left: 10px;
+  border-color: $white;
+  background-color: $tiffany-blue;
+  color: #fff;
+  font-size: 1.25rem;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    // background-color: darken($prussian-blue, 5%);
+    background-color: darken($tiffany-blue, 15%);
+  }
 }
