--- a/scss/module/_contact.scss
+++ b/scss/module/_contact.scss
@@ -77,5 +77,9 @@
     textarea::placeholder {
       padding-top: 8%;
     }
+
+    @include s-e(btn) {
+      @extend %btn;
+    }
   }
 }
