--- a/scss/module/_sidebar.scss
+++ b/scss/module/_sidebar.scss
@@ -7,7 +7,7 @@
   margin: 0;
   margin-right: 10px;
   padding: 0;
-  width: 10%;
+  width: 15%;
   height: 100%; //Temp value until I can make this thing take the whole page
   border-right: 3px solid lighten($prussian-blue, 5%);
   top: 0;
@@ -33,6 +33,19 @@
 
     li {
       text-align: center;
+    }
+  }
+
+  @include s-e(logo) {
+    margin-bottom: 30px;
+    cursor: pointer;
+    img {
+      filter: invert(100%);
+    }
+
+    &:hover {
+      filter: grayscale(100%) brightness(50%) sepia(100%) hue-rotate(-180deg)
+        saturate(700%) contrast(1);
     }
   }
 
